--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-skindesigner-skin-blackholefrodo (0.1.2.git20141218.1828-0frodo0~trusty) trusty; urgency=low
+skindesigner-skin-blackholefrodo (0.1.2.git20150113.2208-0frodo0~trusty) trusty; urgency=low
 
-  * New upstream snapshot
+  * New upstream snapshot (commit 70d574a), build 0001
 
- -- Frodo <frodo.vdr@gmx.net>  Thu, 18 Dec 2014 19:28:14 +0100
+ -- Frodo <frodo.vdr@gmx.net>  Tue, 13 Jan 2015 23:08:23 +0100
 
