--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-skindesigner-skin-blackholefrodo (0.1.3.git20150116.1345-0frodo0~trusty) trusty; urgency=low
+skindesigner-skin-blackholefrodo (0.1.3.git20150116.1720-0frodo0~trusty) trusty; urgency=low
 
-  * 07c883e: change name to epgname skindesigner 1.3.0-1
+  * a1f6f99: correct length from long epgnames
 
- -- Frodo <frodo.vdr@gmx.net>  Fri, 16 Jan 2015 14:45:47 +0100
+ -- Frodo <frodo.vdr@gmx.net>  Fri, 16 Jan 2015 18:21:04 +0100
 
