--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-skindesigner-skin-blackholefrodo (0.1.3.git20150116.2208-0frodo0~trusty) trusty; urgency=low
+skindesigner-skin-blackholefrodo (0.1.3.git20150116.2221-0frodo0~trusty) trusty; urgency=low
 
-  * a84e69d: add logos
+  * bee60f5: Create README.md
 
- -- Frodo <frodo.vdr@gmx.net>  Fri, 16 Jan 2015 23:08:53 +0100
+ -- Frodo <frodo.vdr@gmx.net>  Fri, 16 Jan 2015 23:22:07 +0100
 
