--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-skindesigner-skin-blackholefrodo (0.1.3.git20150116.2221-0frodo0~trusty) trusty; urgency=low
+skindesigner-skin-blackholefrodo (0.1.3.git20150117.2054-0frodo0~trusty) trusty; urgency=low
 
-  * bee60f5: Create README.md
+  * cb0d9d5: changes by channellogos
 
- -- Frodo <frodo.vdr@gmx.net>  Fri, 16 Jan 2015 23:22:07 +0100
+ -- Frodo <frodo.vdr@gmx.net>  Sat, 17 Jan 2015 21:54:33 +0100
 
